argocd/11-chartmuseum-istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: chartmuseum-gateway
  namespace: chartmuseum
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - chartmuseum.homelab.msfidelis.com.br
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chartmuseum
  namespace: chartmuseum
spec:
  hosts:
  - chartmuseum.homelab.msfidelis.com.br
  gateways:
  - chartmuseum-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: chartmuseum
        port:
          number: 8080
