argocd/17-prometheus.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prometheus
  namespace: prometheus
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - prometheus.homelab.msfidelis.com.br
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: prometheus
spec:
  hosts:
  - prometheus.homelab.msfidelis.com.br
  gateways:
  - prometheus
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: prometheus-kube-prometheus-prometheus
        port:
          number: 9090
